# canvas_modules_downloader

./: .gitignore  LICENSE  README.md  canvas_module_downloader.py  credentials.yaml.example  pyproject.toml  setup.sh
utils/: __init__.py  canvas_api.py  canvas_downloader.py  config.py  file_utils.py  page_parser.py
